01.services/01.ingress/04.hello-app-deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-v1
  namespace: test-ingress
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-v1
  template:
    metadata:
      labels:
        app: hello-v1
    spec:
      containers:
      - name: hello
        image: gcr.io/google-samples/hello-app:1.0
        imagePullPolicy: IfNotPresent        
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "32Mi"
            cpu: "100m"
          limits:
            memory: "64Mi"
            cpu: "200m"
