01.services/01.ingress/02.nginx-ingress-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
  namespace: nginx-ingress
spec:
  type: NodePort 
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30000
  selector:
    role: nginx-ingress
