01.services/01.ingress/05.hello-svc-v2.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello-v2-svc
  namespace: test-ingress
spec:
  selector:
    app: hello-v2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
